--- a/package.json
+++ b/package.json
@@ -4,15 +4,24 @@
   "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node ."
+    "start": "node .",
+    "dev": "tsc --watch",
+    "monitor": "pm2 monit"
   },
   "author": "Jonathan Meyer <jon@stej.com>",
   "license": "ISC",
   "dependencies": {
+    "debug": "^4.1.1",
+    "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "node-hid": "^1.2.0",
+    "supports-color": "^7.1.0",
     "typescript": "^3.9.3"
   },
   "devDependencies": {
+    "@types/debug": "^4.1.5",
+    "@types/express": "^4.17.6",
+    "@types/morgan": "^1.9.0",
     "@types/node-hid": "^1.2.0"
   },
   "description": "Blinklight Controller",
