--- a/package.json
+++ b/package.json
@@ -3,22 +3,27 @@
   "version": "0.1.0",
   "main": "dist/index.js",
   "scripts": {
+    "prebuild": "npm run clean",
+    "clean": "rimraf dist coverage",
     "build": "tsc",
     "start": "node .",
-    "dev": "tsc --watch",
+    "dev": "npm run clean && tsc --watch",
     "monitor": "pm2 monit"
   },
   "author": "Jonathan Meyer <jon@stej.com>",
   "license": "ISC",
   "dependencies": {
+    "color": "^3.1.2",
     "debug": "^4.1.1",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "node-hid": "^1.2.0",
+    "rimraf": "^3.0.2",
     "supports-color": "^7.1.0",
     "typescript": "^3.9.3"
   },
   "devDependencies": {
+    "@types/color": "^3.0.1",
     "@types/debug": "^4.1.5",
     "@types/express": "^4.17.6",
     "@types/morgan": "^1.9.0",
