--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "author": "Jonathan Meyer <jon@stej.com>",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "color": "^3.1.2",
     "debug": "^4.1.1",
+    "errorhandler": "^1.5.1",
     "express": "^4.17.1",
     "morgan": "^1.10.0",
     "node-hid": "^1.2.0",
@@ -25,6 +27,7 @@
   "devDependencies": {
     "@types/color": "^3.0.1",
     "@types/debug": "^4.1.5",
+    "@types/errorhandler": "^1.5.0",
     "@types/express": "^4.17.6",
     "@types/morgan": "^1.9.0",
     "@types/node-hid": "^1.2.0"
