--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "blynclight",
   "version": "0.1.0",
   "main": "dist/index.js",
+  "engines": {
+    "node": "11.x"
+  },
   "scripts": {
     "prebuild": "npm run clean",
     "clean": "rimraf dist coverage",
