--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "blynclight",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "main": "dist/index.js",
   "engines": {
     "node": "20.x"
@@ -9,7 +9,8 @@
     "start": "ts-node src/index.ts",
     "build": "tsc",
     "clean": "rimraf dist coverage",
-    "monitor": "pm2 monit"
+    "monitor": "pm2 monit",
+    "showdevices": "hid-showdevices libusb"
   },
   "author": "Jonathan Meyer <jon@stej.com>",
   "license": "ISC",
@@ -24,6 +25,7 @@
     "rimraf": "^5.0.5",
     "supports-color": "^9.4.0",
     "ts-node": "^10.9.2",
+    "lodash": "^4.17.21",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
@@ -32,6 +34,7 @@
     "@types/errorhandler": "^1.5.3",
     "@types/express": "^4.17.21",
     "@types/morgan": "^1.9.9",
+    "@types/lodash": "^4.14.197",
     "@types/node-hid": "^1.3.4"
   },
   "description": "Blinklight Controller",
